--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         target: x86_64-unknown-linux-musl
 
+    - name: Install musl-tools
+      run: sudo apt-get update && sudo apt-get install -y musl-tools
+
     - name: Build project
       run: cargo build --release --target x86_64-unknown-linux-musl
 
